test/types/range/hilde/typeMathError1.chpl
writeln((1:int(32)..100:uint(32)).type:string);
